# agent-doctor

./: .gitignore  AGENTS.harness.md  AGENTS.md  CLAUDE.md  LICENSE  README.md  install.sh  pyproject.toml
.github/: actionlint.yaml
agent_doctor/: __init__.py  _https.py  applier.py  apply.py  autopilot.py  bootstrap.py  capabilities.py  channel_router.py  cli.py  comfort.py  delivery.py  detectors.py  dictate.py  dictate_llm.py  dictate_models.py  dictate_paste.py  dictate_settings.py  digester.py  frustration.py  gemini_image.py  hotkey_install.py  hotkey_parse.py  ingest.py  install.py  mcp.py  measurer.py  pet.py  pet_actions.py  pet_animations.py  pet_display.py  pet_transient.py  proposer.py  reaction_watcher.py  recommend.py  redaction.py  refining.py  report.py  schema.py  self_messages.py  service.py  (+5 more)
audit/: checklist-2026-05-07-pr15-main-reconcile.json
docs/: architecture.md  dictate.md  evaluation.md  taxonomy.md
specs/: CODEX_GOAL_BRIEF.md
tests/: test_adapters_base.py  test_adapters_generic.py  test_adapters_hermes.py  test_adapters_openclaw.py  test_aggregation.py  test_applier.py  test_apply.py  test_autopilot.py  test_capabilities.py  test_channel_router.py  test_classifier_fused.py  test_classifier_signal_fusion.py  test_classifier_tier2.py  test_classifier_user_dict.py  test_cli_adapters.py  test_cli_calibrate.py  test_cli_loop.py  test_cli_subcommand_registration.py  test_delivery.py  test_detectors.py  test_dictate.py  test_dictate_llm.py  test_dictate_models.py  test_dictate_paste.py  test_dictate_settings.py  test_digester.py  test_e2e_speak_and_apply.py  test_evals.py  test_hotkey_capture.py  test_hotkey_install.py  test_hotkey_parse.py  test_https.py  test_mcp.py  (+21 more)
(+65 files in other folders)
