[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-doctor"
version = "0.1.0"
description = "Local-first session postmortem and improvement engine for memoryful AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Agent Doctor Contributors" }
]
keywords = ["agents", "postmortem", "cli", "local-first", "evals"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
agent-doctor = "agent_doctor.cli:main"

[tool.setuptools.packages.find]
include = ["agent_doctor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
