[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-doctor"
version = "0.3.0"
description = "Local-first session postmortem and improvement engine for memoryful AI agents."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Agent Doctor Contributors" }
]
keywords = ["agents", "postmortem", "cli", "local-first", "evals"]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]
llm = ["anthropic>=0.34"]
mcp = ["mcp>=1.0"]

[project.scripts]
agent-doctor = "agent_doctor.cli:main"

[tool.setuptools.packages.find]
include = ["agent_doctor*"]

[tool.setuptools.package-data]
agent_doctor = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
